4_mirror_launch/deployment/destination-rule-v10-v11.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: leaf1
  labels:
    kiali_wizard: weighted_routing
spec:
  host: leaf1
  subsets:
  - name: v10
    labels:
      version: v10
  - name: v11
    labels:
      version: v11
